[gd_scene load_steps=22 format=3 uid="uid://dilt8hwo0hvca"]

[ext_resource type="Script" path="res://Scripts/BattleSystem/BattleCharacter.gd" id="1_bgai8"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_iyxf5"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Enemy/IdleState.gd" id="3_o8777"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Player/PlayerThinkState.gd" id="4_8vwnx"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Player/PlayerDrawState.gd" id="6_6wono"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Player/PlayerChooseSpellItemState.gd" id="7_tqx6b"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/DownedState.gd" id="9_dybv6"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/DataStructures/CharacterStats.gd" id="9_pe6mx"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/DataStructures/CharacterStatEntry.gd" id="10_8eke6"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Player/PlayerDeadState.gd" id="10_l7i33"]
[ext_resource type="Script" path="res://Scripts/BattleSystem/Behaviour/Player/PlayerMoveState.gd" id="10_t7ot4"]

[sub_resource type="Resource" id="Resource_5m16x"]
script = ExtResource("10_8eke6")
stat_key = 0
stat_value = 100.0

[sub_resource type="Resource" id="Resource_4w5ru"]
script = ExtResource("10_8eke6")
stat_key = 2
stat_value = 10.0

[sub_resource type="Resource" id="Resource_xokjm"]
script = ExtResource("10_8eke6")
stat_key = 3
stat_value = 0.5

[sub_resource type="Resource" id="Resource_d7f32"]
script = ExtResource("10_8eke6")
stat_key = 4
stat_value = 1.0

[sub_resource type="Resource" id="Resource_b0cr8"]
script = ExtResource("10_8eke6")
stat_key = 5
stat_value = 1.0

[sub_resource type="Resource" id="Resource_g1ejn"]
script = ExtResource("10_8eke6")
stat_key = 6
stat_value = 5.0

[sub_resource type="Resource" id="Resource_q0f4k"]
script = ExtResource("10_8eke6")
stat_key = 7
stat_value = 5.0

[sub_resource type="Resource" id="Resource_3wxh5"]
script = ExtResource("10_8eke6")
stat_key = 8
stat_value = 1.0

[sub_resource type="Resource" id="Resource_r04hq"]
script = ExtResource("10_8eke6")
stat_key = 9
stat_value = 5.0

[sub_resource type="Resource" id="Resource_tab8j"]
script = ExtResource("10_8eke6")
stat_key = 10
stat_value = 10.0

[node name="BattleCharacter" type="Node" groups=["BattleCharacter"]]
script = ExtResource("1_bgai8")
default_character_name = "The Player"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_iyxf5")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("3_o8777")

[node name="ThinkState" type="Node" parent="StateMachine"]
script = ExtResource("4_8vwnx")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("10_t7ot4")

[node name="DrawState" type="Node" parent="StateMachine"]
script = ExtResource("6_6wono")

[node name="ChooseSpellItemState" type="Node" parent="StateMachine"]
script = ExtResource("7_tqx6b")

[node name="DownedState" type="Node" parent="StateMachine"]
script = ExtResource("9_dybv6")

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("10_l7i33")

[node name="CharacterStats" type="Node" parent="."]
script = ExtResource("9_pe6mx")
stats = Array[ExtResource("10_8eke6")]([SubResource("Resource_5m16x"), SubResource("Resource_4w5ru"), SubResource("Resource_xokjm"), SubResource("Resource_d7f32"), SubResource("Resource_b0cr8"), SubResource("Resource_g1ejn"), SubResource("Resource_q0f4k"), SubResource("Resource_3wxh5"), SubResource("Resource_r04hq"), SubResource("Resource_tab8j")])
